Fix search bar appearance on mobile browsers

--- a/app/styles/components/hero-header.scss
+++ b/app/styles/components/hero-header.scss
@@ -20,6 +20,7 @@
     width: 100%;
     height: 100%;
     // half the size of the amount that magnifying glass protrudes from the bus
-    transform: translate(9.562%, 0)
+    transform: translate(9.562%, 0);
+    -webkit-transform: translate(9.562%, 0);
   }
 }
