--- a/app/styles/components/search.scss
+++ b/app/styles/components/search.scss
@@ -5,13 +5,14 @@
 }
 
 .search__query {
+  -webkit-appearance: none;
   float: left;
   height: 40px;
   width: 100%;
   padding: 0 $padding;
   background-color: rgba(255,255,255,0.85);
   border: none;
-  border-radius: $border-radius 0 0 $border-radius;
+  border-radius: $border-radius;
   box-shadow: $box-shadow;
   transition: all 0.2s $ease;
   vertical-align: bottom;
@@ -23,6 +24,6 @@
 .search__submit {
   position: absolute;
   right: 0;
+  background: transparent;
   box-shadow: none;
 }
-
